tests/NormalTests/paczka1/fuzzy1/43243067.err
Error in line 2: nEmla0UP5H A360 52,4
Error in line 1: 3hcMUnx8Dg2 S422 22,2
Error in line 17: ^DtmLvUM S791 1,0
Error in line 7: nEmla0UP5H A360 43,7
Error in line 33: onukn4kg A123 43,3
Error in line 35: z4v A360 65,6
